# imaeg-processing-toolbox

./: Makefile  README.md  frame_images.sh  pyproject.toml  resize_low.sh  resize_medium.sh
src/framing/: __init__.py  framing.py
src/resize_image/: __init__.py  resize_image.py
src/resizing/: __init__.py
src/utils/: utils.py
tests/test_framing/: __init__.py  test_framing.py
tests/test_resize_image/: __init__.py  test__init__.py  test_resize_image.py
tests/test_resizing/: test_resizing.py
